[package]
name = "last-progress1"
version = "0.0.1"
authors = ["Takuma Yoshioka <nu11p0.6477@gmail.com>"]

[dependencies]
cgmath = "^0.7"
env_logger = "^0.3"
fbx-load = { git = "https://github.com/l1048576/fbx-load.git", rev = "2cf0a6c6a237f12ac1501d832a974aced494e266" }
fnv = "^1.0"
glium = "^0.13"
image="^0.7"
log = "^0.3"
time = "^0.1.34"
